# aimeio-pcsc

./: meson.build  readme.md
aimeio/: aimeio.c  meson.build
aimepcsc/: aimepcsc.c  aimepcsc.h  aimereader.c  meson.build
